[package]
name = "nwr"
version = "0.6.0"
authors = ["wang-q <wang-q@outlook.com>"]
description = "`nwr` is a command line tool for newick and taxonomy"
documentation = "https://github.com/wang-q/nwr"
homepage = "https://github.com/wang-q/nwr"
repository = "https://github.com/wang-q/nwr"
readme = "README.md"
categories = ["command-line-utilities", "science"]
license = "MIT"
edition = "2018"

[[bin]]
name = "nwr"
path = "src/nwr.rs"

[dependencies]
clap = { version = "4.0.29", features = ["cargo"] }
anyhow = "1.0.66"
regex = "1.7.0"
lazy_static = "1.4.0"
tera = "1.17.1"

flate2 = "1.0.25"
itertools = "0.10.5"
#bio = "1.1.0"

intspan = "^0.7.1"

ftp = "3.0.1"
tar = "0.4.38"
dirs = "4.0.0"
log = "0.4.17"
simplelog = "0.12.0"
md5 = "0.7.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
csv = "1.1.6"

[build-dependencies]

[dev-dependencies]
tempfile = "3.3.0"
assert_cmd = "2.0.4"
predicates = "2.1.1"

[profile.release]
lto = true
